@@ -16,6 +16,7 @@ Changes:
 - Add vmstat utility.
 - Add ability to edit sync property on ZFS dataset and volume.
 - Add ability to edit reservation property on ZFS dataset.
+- Add ability to edit permission on ZFS dataset.
 - Add ability to edit mountpoint of ZFS pool.
 - Add ability to import encrypted disks.
 - Add ability to import software raid disks. (except vinum)
